gap issue in nav menu

--- a/styles/index.css
+++ b/styles/index.css
@@ -328,7 +328,7 @@ footer ul{
 .mobile-nav-menu{
   display: none;
   flex-direction: column;
-  gap: 0.3rem;
+  gap: 0.2rem;
   cursor: pointer;
   position: relative;
   width: 25px;
